--- a/Ajax/Web.config
+++ b/Ajax/Web.config
@@ -9,8 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Ajax-20150822114815.mdf;Initial Catalog=aspnet-Ajax-20150822114815;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="Con" connectionString="Data Source=.\sqlserver;Initial Catalog=CrudAjax;Integrated Security=False;User ID=sa;Password=mikemajesty;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
